[metadata]
name=deluder
version=attr:deluder.common.VERSION
description=Deluder is a tool for intercepting traffic of proxy unaware applications.
author=Michal Valka (warxim.com)
keywords=deluder,networking,intercept,traffic
license=GNU GPLv3
url=https://github.com/Warxim/deluder

[options]
packages=find:
include_package_data=True
python_requires=>=3.9
install_requires=
    frida
    psutil
    argparse

[options.package_data]
* = *.js

[options.entry_points]
console_scripts =
    deluder=deluder.__main__:main

[options.packages.find]
exclude=
    tests*
